# ga4_dbt_mart

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  dbt_project.yml  pyproject.toml
.github/: dbt_profiles_dummy.yml
.github/workflows/: dbt_build.yml  lint.yml
macros/: README.md  extract_url_path.sql
macros/profiling/: inspect_array_field.sql  inspect_record_field.sql  inspect_scalar_columns.sql
models/marts/marketing/: mart_session_conversions.sql  mart_session_conversions.yml
models/staging/ga4/: ga4_sources.yml  stg_ga4_events.sql  stg_ga4_events.yml
tests/: invalid_cv_path__on_int_sessions_aggregated_from_events.sql  unique_per_session_on_int_sessions_aggregated_from_events.sql
