[tool.poetry]
name = "ga4-dbt-mart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dbt-bigquery = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
sqlfluff-templater-dbt = "^3.4.0"
dbt-bigquery = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
